updating product flow
